--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -43,6 +43,12 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
+  - type: bind
+    source: /home/steven/code/bidex
+    target: ${DOCKER_ISAACLAB_PATH}/../bidex
+  - type: bind
+    source: /home/steven/code/pql
+    target: ${DOCKER_ISAACLAB_PATH}/../pql
     # The effect of these volumes is twofold:
     # 1. Prevent root-owned files from flooding the _build and logs dir
     #    on the host machine
